# Digital_Synth

./: Cargo.toml  synth.rs
src/: main.rs  wave.rs
